@@ -1,3 +1,4 @@
+// File: Main.java
 package application.chesstrainerfx;
 
 import application.pgnreader.io.PGNReader;
@@ -20,6 +21,7 @@ import java.util.List;
 
 public class Main extends Application {
 
+    /** Alle beschikbare hoofdstukken (PGN-bestanden in resources) */
     private final List<String> chapterPaths = Arrays.asList(
             "/pgn/mating/chapters/1_epaulette_mate.pgn",
             "/pgn/mating/chapters/2_swallowstail_mate.pgn",
@@ -59,26 +61,25 @@ public class Main extends Application {
             "/pgn/mating/chapters/36_blackburne_mate.pgn"
     );
 
-
-    private Scene scene;       // één Scene
-    private Parent homeRoot;   // bewaart het splash/home-root
+    private Scene scene;
+    private Parent homeRoot;
 
     @Override
     public void start(Stage stage) {
-        homeRoot = buildHome();                 // splash/home
+        homeRoot = buildHome();
         scene = new Scene(homeRoot, 1500, 1000);
         scene.getStylesheets().add(getClass().getResource("/splash.css").toExternalForm());
 
         stage.setTitle("ChessTrainer — Home");
-        stage.setResizable(false);              // jij wilde vaste resolutie 1500x1000
+        stage.setResizable(false);
         stage.setScene(scene);
         stage.show();
     }
 
-    /* === Splash/home met 3 knoppen === */
+    /** === Splash / Home scherm === */
     private Parent buildHome() {
         StackPane root = new StackPane();
-        root.getStyleClass().add("splash-root"); // gebruikt je achtergrond-afbeelding via CSS
+        root.getStyleClass().add("splash-root");
 
         StackPane overlay = new StackPane();
         overlay.setBackground(new Background(
@@ -89,14 +90,13 @@ public class Main extends Application {
         buttons.setPadding(new Insets(24));
         buttons.setAlignment(Pos.BOTTOM_RIGHT);
 
-        Button btnMate    = makeTile("♛\nMating\nPatterns");
+        Button btnMate = makeTile("♛\nMating\nPatterns");
         Button btnTactics = makeTile("⚡\nTactics");
         Button btnPuzzles = makeTile("♟\nPuzzles");
 
         buttons.getChildren().addAll(btnMate, btnTactics, btnPuzzles);
         StackPane.setAlignment(buttons, Pos.BOTTOM_RIGHT);
 
-        // Koppeling
         btnMate.setOnAction(e -> startTraining("MATE_PATTERNS"));
         btnTactics.setOnAction(e -> startTraining("TACTICS"));
         btnPuzzles.setOnAction(e -> startTraining("PUZZLES"));
@@ -113,37 +113,39 @@ public class Main extends Application {
         return b;
     }
 
-    /* === Router === */
+    /** Router: bepaalt welk scherm geladen wordt */
     private void startTraining(String mode) {
         switch (mode) {
             case "MATE_PATTERNS" -> scene.setRoot(buildMatingPatterns());
-            case "TACTICS"       -> { /* TODO later */ }
-            case "PUZZLES"       -> { /* TODO later */ }
-            default              -> { /* no-op */ }
+            default -> showInfo("Nog niet beschikbaar", "Deze trainingscategorie is nog niet actief.");
         }
     }
 
-    private List<Chapter> buildChapters(List<String> chapterPaths){
+    /** Bouwt alle hoofdstukken (PGN-bestanden -> Chapter objecten) */
+    private List<Chapter> buildChapters(List<String> paths) {
         List<Chapter> chapters = new ArrayList<>();
-
-        for (String path: chapterPaths){
+        for (String path : paths) {
             List<Exercise> exercises = PGNReader.readChapter(path);
-            chapters.add(new Chapter(exercises.getFirst().getTitle(),exercises));
-
+            if (!exercises.isEmpty()) {
+                chapters.add(new Chapter(exercises.get(0).getTitle(), exercises, path));
+            }
         }
         return chapters;
     }
 
-    /* === View voor Mating Patterns === */
+    /** === View: Mating Patterns === */
     private Parent buildMatingPatterns() {
-        var titles = loadMatingPatternTitles(); // jouw provider
+        List<Chapter> chapters = buildChapters(chapterPaths);
+        List<String> titles = chapters.stream().map(Chapter::getTitle).toList();
+
         var view = new MatingPatternsView(titles, name -> {
-            System.out.println("Gekozen pattern: " + name);
-            // TODO open les/detail
-            openChapterWindow(name ,"/pgn/mating/chapters/1_epaulette_mate.pgn");
+            Chapter chapter = chapters.stream()
+                    .filter(c -> c.getTitle().equals(name))
+                    .findFirst()
+                    .orElse(null);
+            if (chapter != null) openChapterWindow(chapter);
         });
 
-        // “Terug”-knop linksboven
         Button back = new Button("← Back");
         back.setOnAction(e -> scene.setRoot(homeRoot));
         back.setStyle("""
@@ -155,149 +157,52 @@ public class Main extends Application {
         StackPane wrapper = new StackPane(view, back);
         StackPane.setAlignment(back, Pos.TOP_LEFT);
         StackPane.setMargin(back, new Insets(16));
-
         return wrapper;
     }
 
-    private List<String> loadMatingPatternTitles() {
+    /** Venster met lijst van oefeningen in een hoofdstuk */
+    private void openChapterWindow(Chapter chapter) {
+        List<Exercise> exercises = chapter.getExercises();
 
-        List<String> titles = new ArrayList<>();
-        for(Chapter chapter: buildChapters(chapterPaths)){
-            //System.out.println(chapter.getTitle());
-            for(Exercise exercise:chapter.getExercises()){
-                System.out.println(exercise.getTitle());
-                System.out.println(exercise.getComments());
-                System.out.println(exercise.getFen());
-                System.out.println(exercise.getMoves());
-            }
-
-        }
-
-        for (String pngPath : chapterPaths) {
-
-            List<Exercise> exercises = PGNReader.readChapter(pngPath);
-            for (Exercise exercise : exercises) {
-                if (exercise.getTitle().matches("^\\d.*")) {
-                    System.out.println(exercise.getTitle());
-                    titles.add(exercise.getTitle());
-                }
-            }
-        }
-
-
-
-        return titles;
-
-    }
-    private void openChapterWindow(String chapterTitle, String pgnPath) {
-        List<Exercise> exercises = PGNReader.readChapter(pgnPath);
-
-        Label titleLbl = new Label(chapterTitle);
+        Label titleLbl = new Label(chapter.getTitle());
         titleLbl.setStyle("-fx-font-size: 18px; -fx-font-weight: bold;");
 
-        // Links: lijst met oefeningen
         ListView<Exercise> listView = new ListView<>();
         listView.getItems().addAll(exercises);
+
+        TextArea fenArea = new TextArea();
+        fenArea.setEditable(false);
+        TextArea movesArea = new TextArea();
+        movesArea.setEditable(false);
+
+        listView.getSelectionModel().selectedItemProperty().addListener((obs, o, ex) -> {
+            fenArea.setText(ex != null ? ex.getFen() : "");
+            movesArea.setText(ex != null ? ex.getMoves() : "");
+        });
+        if (!exercises.isEmpty()) listView.getSelectionModel().selectFirst();
+
         VBox left = new VBox(8, new Label("Oefeningen"), listView);
         left.setPadding(new Insets(10));
         left.setPrefWidth(350);
 
-        // Rechts: FEN + MOVES + knop
-        Label fenLbl = new Label("FEN:");
-        TextArea fenArea = new TextArea();
-        fenArea.setEditable(false);
-        fenArea.setWrapText(true);
-        fenArea.setPrefRowCount(3);
-
-        Label movesLbl = new Label("Moves (uit Exercise.getMoves()):");
-        TextArea movesArea = new TextArea();
-        movesArea.setEditable(false);
-        movesArea.setWrapText(true);
-        movesArea.setPrefRowCount(8);
-
-        Button openBoardBtn = new Button("Open bord in venster");
+        Button openBoardBtn = new Button("Open bord");
         openBoardBtn.setMaxWidth(Double.MAX_VALUE);
 
-        VBox right = new VBox(10, fenLbl, fenArea, movesLbl, movesArea, openBoardBtn);
+        VBox right = new VBox(10, new Label("FEN:"), fenArea,
+                new Label("Zetten:"), movesArea, openBoardBtn);
         right.setPadding(new Insets(10));
 
         SplitPane split = new SplitPane(left, right);
-        split.setDividerPositions(0.40);
+        split.setDividerPositions(0.4);
 
         VBox root = new VBox(10, titleLbl, split);
         root.setPadding(new Insets(12));
 
-        // Bij selectie: FEN + MOVES tonen
-        listView.getSelectionModel().selectedItemProperty().addListener((obs, oldEx, ex) -> {
-            fenArea.setText(ex != null ? nullToEmpty(ex.getFen()) : "");
-            movesArea.setText(ex != null ? nullToEmpty(ex.getMoves()) : "");
-        });
-
-        if (!exercises.isEmpty()) {
-            listView.getSelectionModel().selectFirst();
-        }
-
-        // Knop: open BoardView-venster met FEN
-        openBoardBtn.setOnAction(e -> {
-            Exercise ex = listView.getSelectionModel().getSelectedItem();
-            if (ex == null) {
-                showInfo("Geen oefening geselecteerd.", "Selecteer eerst een oefening.");
-                return;
-            }
-            String fen = nullToEmpty(ex.getFen());
-            boolean whiteToMove = parseSideToMoveFromFen(fen); // 'w' → true
-            openBoardWindow(fen, chapterTitle + " – " + ex.getTitle(), whiteToMove);
-        });
-
         Stage s = new Stage();
-        s.setTitle(chapterTitle);
+        s.setTitle(chapter.getTitle());
         s.setScene(new Scene(root, 900, 560));
         s.show();
     }
-    /** Opent een nieuw venster met jouw bestaande BoardView en zet de stukken volgens FEN. */
-    private void openBoardWindow(String fen, String windowTitle, boolean whiteToMove) {
-        BoardModel boardModel = new BoardModel();
-        Controller controller = new Controller();
-        controller.setWhiteTurn(whiteToMove);
-
-        BoardViewSetup boardView = new BoardViewSetup(boardModel, controller, whiteToMove,800);
-
-        // Bord leeg → FEN laden → UI refresh
-        for (SquareModel sq : boardModel.getSquares()) sq.setPiece(null);
-        boardModel.initializeFromFEN(fen == null ? "" : fen);
-        boardView.onBoardUpdated();
-
-        VBox root = new VBox(boardView);
-        root.setPadding(new Insets(10));
-
-        Stage s = new Stage();
-        s.setTitle(windowTitle);
-        s.setScene(new Scene(root, 1500, 1000)); // afgestemd op jouw BoardView (~865x865 achtergrond)
-        s.show();
-    }
-
-    // Helpers
-    private static boolean parseSideToMoveFromFen(String fen) {
-        try {
-            String[] parts = fen.trim().split("\\s+");
-            return parts.length >= 2 ? "w".equals(parts[1]) : true;
-        } catch (Exception e) {
-            return true;
-        }
-    }
-
-    private static String toNiceTitle(String path) {
-        String file = path.substring(path.lastIndexOf('/') + 1).replace(".pgn", "");
-        String[] parts = file.split("_");
-        StringBuilder sb = new StringBuilder();
-        for (String p : parts) {
-            if (sb.length() > 0) sb.append(" ");
-            sb.append(Character.toUpperCase(p.charAt(0))).append(p.substring(1));
-        }
-        return sb.toString();
-    }
-
-    private static String nullToEmpty(String s) { return s == null ? "" : s; }
 
     private static void showInfo(String header, String msg) {
         Alert a = new Alert(Alert.AlertType.INFORMATION);
